force-app/main/default/objects/ProductRouting__c/ProductRouting__c.object-meta.xml
<CustomObject>
    <label>Product Routing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>