force-app/main/default/objects/ProductRouting__c/fields/Case_Received_Custom_Header__c.field-meta.xml
<CustomField>
    <fullName>Case_Received_Custom_Header__c</fullName>
    <description>Shows custom text in the header of the case received email template for the related product.</description>
    <label>Case Received Custom Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>