force-app/main/default/objects/ProductRouting__c/fields/Case_Updated_Template__c.field-meta.xml
<CustomField>
    <fullName>Case_Updated_Template__c</fullName>
    <description>Used to highlight which case updated email templates are sent for the associated related product.</description>
    <label>Case Updated Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal Enabled</fullName>
                <default>true</default>
                <label>Portal Enabled</label>
            </value>
            <value>
                <fullName>Portal Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>