force-app/main/default/objects/ProductRouting__c/fields/Classic_Entitlement_Process__c.field-meta.xml
<CustomField>
    <fullName>Classic_Entitlement_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to denote the classic entitlement SLA</description>
    <label>Classic Entitlement Process</label>
    <referenceTo>Entitlement_Process__c</referenceTo>
    <relationshipLabel>Product Routings</relationshipLabel>
    <relationshipName>Product_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>