force-app/main/default/objects/ProductRouting__c/fields/Closing_The_Loop_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Closing_The_Loop_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closing The Loop Enabled</label>
    <type>Checkbox</type>
</CustomField>