force-app/main/default/objects/ProductRouting__c/fields/Community_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Community_Redirect__c</fullName>
    <label>Community Redirect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>