force-app/main/default/objects/ProductRouting__c/fields/Dedicated_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Telephone_Number__c</fullName>
    <label>Dedicated Telephone Number</label>
    <type>Phone</type>
</CustomField>