force-app/main/default/objects/ProductRouting__c/fields/Dev_Tool__c.field-meta.xml
<CustomField>
    <fullName>Dev_Tool__c</fullName>
    <description>Development Tool used by this product</description>
    <label>Dev Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>