force-app/main/default/objects/ProductRouting__c/fields/Dev_Tool_Integration__c.field-meta.xml
<CustomField>
    <fullName>Dev_Tool_Integration__c</fullName>
    <description>The integration currently used by this product</description>
    <label>Dev Tool Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank/Null/Empty</fullName>
            </value>
            <value>
                <fullName>Original JIRA</fullName>
            </value>
            <value>
                <fullName>Service Rocket</fullName>
            </value>
            <value>
                <fullName>Quantum Whisper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>