force-app/main/default/objects/ProductRouting__c/fields/Enabled_For_Community__c.field-meta.xml
<CustomField>
    <fullName>Enabled_For_Community__c</fullName>
    <label>Enabled For Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Redirection</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>