force-app/main/default/objects/ProductRouting__c/fields/Enabled_For_Live_Chat__c.field-meta.xml
<CustomField>
    <fullName>Enabled_For_Live_Chat__c</fullName>
    <label>Enabled For Live Chat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>