force-app/main/default/objects/ProductRouting__c/fields/Enabled_For_Web_Cases__c.field-meta.xml
<CustomField>
    <fullName>Enabled_For_Web_Cases__c</fullName>
    <label>Enabled For Web Cases</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>