force-app/main/default/objects/ProductRouting__c/fields/Essential_Entitlement_Process__c.field-meta.xml
<CustomField>
    <fullName>Essential_Entitlement_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Essential Entitlement Process</label>
    <referenceTo>Entitlement_Process__c</referenceTo>
    <relationshipLabel>Product Routings (Essential Entitlement Process)</relationshipLabel>
    <relationshipName>Essential_Product_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>