force-app/main/default/objects/ProductRouting__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <description>Field to configure the product logo image, via a url linking to the relevant asset file.</description>
    <inlineHelpText>Enter a relative url linking to the content asset file which contains the logo for this product routing</inlineHelpText>
    <label>Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>