force-app/main/default/objects/ProductRouting__c/fields/Information_Required_Automation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Information_Required_Automation_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to enable the related product range for automated case follow-ups when a case is assigned a Case Status of Customer Outstanding.</description>
    <label>Information Required Automation Enabled</label>
    <type>Checkbox</type>
</CustomField>