force-app/main/default/objects/ProductRouting__c/fields/KCSImplemented__c.field-meta.xml
<CustomField>
    <fullName>KCSImplemented__c</fullName>
    <label>KCS Implemented</label>
    <type>Date</type>
</CustomField>