force-app/main/default/objects/ProductRouting__c/fields/Live_Chat_Button_ID__c.field-meta.xml
<CustomField>
    <fullName>Live_Chat_Button_ID__c</fullName>
    <label>Live Chat Button ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>