force-app/main/default/objects/ProductRouting__c/fields/Livechat_Levels__c.field-meta.xml
<CustomField>
    <fullName>Livechat_Levels__c</fullName>
    <label>Live Chat Plan Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Essential</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>