force-app/main/default/objects/ProductRouting__c/fields/Phone_Plan_Availability__c.field-meta.xml
<CustomField>
    <fullName>Phone_Plan_Availability__c</fullName>
    <description>Limits phone availability based on success plan</description>
    <label>Phone Plan Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Essential</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>