force-app/main/default/objects/ProductRouting__c/fields/Premier_Entitlement_Process__c.field-meta.xml
<CustomField>
    <fullName>Premier_Entitlement_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premier Entitlement Process</label>
    <referenceTo>Entitlement_Process__c</referenceTo>
    <relationshipLabel>Product Routings (Premier Entitlement Process)</relationshipLabel>
    <relationshipName>Premier_Product_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>