force-app/main/default/objects/ProductRouting__c/fields/ProductColour__c.field-meta.xml
<CustomField>
    <fullName>ProductColour__c</fullName>
    <description>The Colour which represents this product in the success community portal</description>
    <inlineHelpText>Select a product colour to represent this product in the success community portal</inlineHelpText>
    <label>Product Colour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colour 1</fullName>
            </value>
            <value>
                <fullName>Colour 2</fullName>
            </value>
            <value>
                <fullName>Colour 3</fullName>
            </value>
            <value>
                <fullName>Colour 4</fullName>
            </value>
            <value>
                <fullName>Colour 5</fullName>
            </value>
            <value>
                <fullName>Colour 6</fullName>
            </value>
            <value>
                <fullName>Colour 7</fullName>
            </value>
            <value>
                <fullName>Colour 8</fullName>
            </value>
            <value>
                <fullName>Colour 9</fullName>
            </value>
            <value>
                <fullName>Colour 10</fullName>
            </value>
            <value>
                <fullName>Colour 11</fullName>
            </value>
            <value>
                <fullName>Colour 12</fullName>
            </value>
            <value>
                <fullName>Colour 13</fullName>
            </value>
            <value>
                <fullName>Colour 14</fullName>
            </value>
            <value>
                <fullName>Colour 15</fullName>
            </value>
            <value>
                <fullName>Colour 16</fullName>
            </value>
            <value>
                <fullName>Colour 17</fullName>
            </value>
            <value>
                <fullName>Colour 18</fullName>
            </value>
            <value>
                <fullName>Colour 19</fullName>
            </value>
            <value>
                <fullName>Colour 20</fullName>
            </value>
            <value>
                <fullName>Colour 21</fullName>
            </value>
            <value>
                <fullName>Colour 22</fullName>
            </value>
            <value>
                <fullName>Colour 23</fullName>
            </value>
            <value>
                <fullName>Colour 24</fullName>
            </value>
            <value>
                <fullName>Colour 25</fullName>
            </value>
            <value>
                <fullName>Colour 26</fullName>
            </value>
            <value>
                <fullName>Colour 27</fullName>
            </value>
            <value>
                <fullName>Colour 28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>