force-app/main/default/objects/ProductRouting__c/fields/Question_To_Case_Days__c.field-meta.xml
<CustomField>
    <fullName>Question_To_Case_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days until a community post escalates to a question</description>
    <label>Question To Case Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>