force-app/main/default/objects/ProductRouting__c/fields/recordid__c.field-meta.xml
<CustomField>
    <fullName>recordid__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recordid</label>
    <type>Text</type>
</CustomField>