force-app/main/default/objects/ProductRouting__c/fields/Related_Product_Range__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Range__c</fullName>
    <label>Related Product Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductRange</valueSetName>
    </valueSet>
</CustomField>