force-app/main/default/objects/ProductRouting__c/fields/RoutingGroup__c.field-meta.xml
<CustomField>
    <fullName>RoutingGroup__c</fullName>
    <label>Routing Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>