force-app/main/default/objects/ProductRouting__c/fields/Standard_Entitlement_Process__c.field-meta.xml
<CustomField>
    <fullName>Standard_Entitlement_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Entitlement Process</label>
    <referenceTo>Entitlement_Process__c</referenceTo>
    <relationshipLabel>Product Routings (Standard Entitlement Process)</relationshipLabel>
    <relationshipName>Standard_Product_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>