force-app/main/default/objects/ProductRouting__c/fields/Support_Team_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Support_Team_Go_Live__c</fullName>
    <description>The date that the support team started using Service Cloud to manage cases for this product.</description>
    <label>Support Team Go Live</label>
    <type>Date</type>
</CustomField>