force-app/main/default/objects/ProductRouting__c/fields/TopicID__c.field-meta.xml
<CustomField>
    <fullName>TopicID__c</fullName>
    <description>Used by the community</description>
    <label>Topic ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>