force-app/main/default/objects/ProductRouting__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <defaultValue>(&quot;Public&quot;)</defaultValue>
    <description>Visibility of community articles related to this product</description>
    <inlineHelpText>Select &apos;Public&apos; to show content to all users, &apos;Admin&apos; to limit visibility to community admin users and &apos;None&apos; to hide</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>