force-app/main/default/objects/ProductRouting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Division__c</columns>
    <columns>recordid__c</columns>
    <columns>Support_Team_Go_Live__c</columns>
    <columns>Dev_Tool__c</columns>
    <columns>Dev_Tool_Integration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>