force-app/main/default/objects/ProductRouting__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Product_Division__c</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>Visibility__c</columns>
    <columns>ProductColour__c</columns>
    <columns>TopicID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Enabled_For_Live_Chat__c</columns>
    <columns>Enabled_For_Telephony__c</columns>
    <columns>Enabled_For_Web_Cases__c</columns>
    <columns>Dedicated_Telephone_Number__c</columns>
    <columns>Enabled_for_FlexPoints__c</columns>
    <columns>Enabled_For_Community__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>