force-app/main/default/objects/ProductRouting__c/listViews/All_Entitlement_Processes.listView-meta.xml
<ListView>
    <fullName>All_Entitlement_Processes</fullName>
    <columns>NAME</columns>
    <columns>Product_Division__c</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>Classic_Entitlement_Process__c</columns>
    <columns>Essential_Entitlement_Process__c</columns>
    <columns>Standard_Entitlement_Process__c</columns>
    <columns>Premier_Entitlement_Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Entitlement Processes</label>
</ListView>