force-app/main/default/objects/ProductRouting__c/listViews/ANZ_Division_Email_Templates.listView-meta.xml
<ListView>
    <fullName>ANZ_Division_Email_Templates</fullName>
    <columns>NAME</columns>
    <columns>Product_Division__c</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>Visibility__c</columns>
    <columns>Support_Team_Go_Live__c</columns>
    <columns>Case_Received_Template__c</columns>
    <columns>Case_Updated_Template__c</columns>
    <columns>Case_Resolved_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Division__c</field>
        <operation>equals</operation>
        <value>ANZ</value>
    </filters>
    <label>ANZ Division - Email Templates</label>
</ListView>