force-app/main/default/objects/ProductRouting__c/listViews/APAC_Product_Routings.listView-meta.xml
<ListView>
    <fullName>APAC_Product_Routings</fullName>
    <columns>NAME</columns>
    <columns>Product_Division__c</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>Support_Team_Go_Live__c</columns>
    <columns>Visibility__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Division__c</field>
        <operation>equals</operation>
        <value>ANZ,APAC,Attache</value>
    </filters>
    <label>APAC Product Routings</label>
</ListView>