force-app/main/default/objects/ProductRouting__c/listViews/Community_Data.listView-meta.xml
<ListView>
    <fullName>Community_Data</fullName>
    <columns>NAME</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>TopicID__c</columns>
    <columns>Enabled_For_Community__c</columns>
    <columns>Community_Redirect__c</columns>
    <filterScope>Everything</filterScope>
    <label>Community Data</label>
</ListView>