force-app/main/default/objects/ProductRouting__c/listViews/Community_Disabled.listView-meta.xml
<ListView>
    <fullName>Community_Disabled</fullName>
    <columns>NAME</columns>
    <columns>Product_Division__c</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>TopicID__c</columns>
    <columns>Enabled_For_Community__c</columns>
    <columns>Community_Redirect__c</columns>
    <columns>Question_To_Case_Days__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enabled_For_Community__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Other</value>
    </filters>
    <filters>
        <field>Visibility__c</field>
        <operation>notEqual</operation>
        <value>Archived</value>
    </filters>
    <label>Community Disabled</label>
</ListView>