force-app/main/default/objects/ProductRouting__c/listViews/Community_Enabled.listView-meta.xml
<ListView>
    <fullName>Community_Enabled</fullName>
    <columns>NAME</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>TopicID__c</columns>
    <columns>Enabled_For_Community__c</columns>
    <columns>Question_To_Case_Days__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enabled_For_Community__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Community Enabled</label>
</ListView>