force-app/main/default/objects/ProductRouting__c/listViews/Disabled_for_Closing_The_Loop.listView-meta.xml
<ListView>
    <fullName>Disabled_for_Closing_The_Loop</fullName>
    <columns>Product_Division__c</columns>
    <columns>NAME</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>Visibility__c</columns>
    <columns>TopicID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Closing_The_Loop_Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Closing_The_Loop_Enabled__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Disabled for Closing The Loop</label>
</ListView>