force-app/main/default/objects/ProductRouting__c/listViews/Enabled_for_FlexPoints.listView-meta.xml
<ListView>
    <fullName>Enabled_for_FlexPoints</fullName>
    <columns>NAME</columns>
    <columns>Product_Division__c</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>Visibility__c</columns>
    <columns>Enabled_for_FlexPoints__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enabled_for_FlexPoints__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Enabled for FlexPoints</label>
</ListView>