force-app/main/default/objects/ProductRouting__c/listViews/ERP_Product_Routings.listView-meta.xml
<ListView>
    <fullName>ERP_Product_Routings</fullName>
    <columns>NAME</columns>
    <columns>Product_Division__c</columns>
    <columns>Related_Product_Range__c</columns>
    <columns>Support_Team_Go_Live__c</columns>
    <columns>Visibility__c</columns>
    <columns>Enabled_For_Telephony__c</columns>
    <columns>Dedicated_Telephone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Division__c</field>
        <operation>equals</operation>
        <value>FMS,SCS</value>
    </filters>
    <label>ERP Product Routings</label>
</ListView>